[metadata]
name = ardupilot_simple_flight
version = 0.1.0
description = A ROS 2 package for ArduPilot that performs a simple flight routine.
author = Your Name
author_email = your.email@example.com
license = MIT
url = https://github.com/yourusername/ardupilot_simple_flight

[options]
packages = find:
install_requires =
    rclpy
    std_msgs
    mavros_msgs

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    simple_flight_node = ardupilot_simple_flight.simple_flight_node:main

[develop]
script_dir=$base/lib/ardupilot_simple_flight
[install]
install_scripts=$base/lib/ardupilot_simple_flight
